fix: adjust styles for button spacing (#277)

--- a/src/views/sampling-settings/style/index.css
+++ b/src/views/sampling-settings/style/index.css
@@ -72,7 +72,7 @@ h2 {
 
 .record-button {
     display: flex;
-    padding-left: 10px;
+    padding-left: 4px;
 }
 
 .command-line-preview-title {
@@ -91,7 +91,10 @@ h2 {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-left: -20px;
+    background: none;
+    outline: none;
+    border: none;
+    color: var(--vscode-editor-foreground);
 }
 
 .copy-button:hover {
@@ -128,7 +131,7 @@ section.setting:not(:last-child) {
 
 .file-picker {
     display: flex;
-    gap: 8px;
+    gap: 4px;
     flex-wrap: wrap;
     align-items: center;
 }
@@ -175,13 +178,14 @@ footer h1 {
 }
 
 footer .footer-display {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4px;
     border-radius: 2px;
     color: var(--vscode-settings-textInputForeground);
     border: 1px solid var(--vscode-settings-textInputBorder, transparent);
-    padding-left: 6px;
-    padding-right: 26px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px 6px;
     word-break: break-all;
     width: 100%;
 }
